UNRELEASED CHANGES:

* Add pagination to the list of contacts.

RELEASED VERSIONS:

v0.2.0 - 2017-06-29
-------------------

New features:
* Add import from vCard (or .vcf) in the Settings panel.
* Add ability to reset account. Resetting an account will remove everything - but won't close the account like deletion would.

Improvements:
* Journal entries now respect new lines.
* Fix name not appearing in the latest actions tab on the dashboard.

v0.1.0 - 2017-06-26
-------------------

* First official release. We'll now follow this structure. If you self host, we highly recommend that you check the latest tag instead of pulling from master.

2017-06-24
----------

Improvements:
* On the people's tab, filters are now placed above the table.

2017-06-22
----------

New features:
* Add ability to define name order (Firstname Lastname or Lastname Firstname) in the Settings panel.

Improvements:
* Fix the order of the address fields.
* Env variables are now read from config files rather than directly from the .env file.
* Some US typos fix.

2017-06-20
----------

New features:
* Add support for mutiple users in one account.
* Add subscriptions on .com. This has no effect on self hosted versions.

2017-06-16
----------

Improvements:
* Add automatic reminders when setting a birthdate When adding a birthdate (contact, kid, significant other). When updating or deleting the person, the reminder will be changed accordingly.

2017-06-15
----------

New features:
* Add reminder automatically when you set the birthdate of a contact.

Improvements:
* Add timezone for Switzerland.
* Major refactoring of how contacts are managed in the codebase.

2017-06-14
----------

New features:
* Timezone can now be defined in a new ENV variable so every new user of the instance will have this timezone. Set to America/New_York by default.
* Add ability to edit a note.
* Add ability to edit a debt.
* Add support for South African ZAR currency.

Improvements:
* Fix Deploy to Heroku button.