@@ -1,4 +1,0 @@
-var options = {
-  valueNames: [ 'people-list-item-name' ]
-};
-var userList = new List('search-list', options);
